# src/modules/auth/auth.controller.ts
@@ -3,6 +3,8 @@ import { authService } from "./auth.service";
 import { SignupDto } from "./dto/signup.dto";
 import { LoginDto } from "./dto/login.dto";
 import { ResponseDto } from "../../globalDto/response.dto";
+import { PharmacySignupDto } from "./dto/pharmacy-signup.dto";
+import { HttpStatus } from "../../constants/http-status";
 
 export class AuthController {
   signup: RequestHandler = async (
@@ -40,6 +42,26 @@ export class AuthController {
       );
 
       res.status(200).json(responseObj);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  pharmacySignup: RequestHandler = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const pharmacyData = req.body as PharmacySignupDto;
+      const result = await authService.pharmacySignup(pharmacyData);
+
+      const responseObj = ResponseDto.createSuccessResponse(
+        "Pharmacy created successfully",
+        result
+      );
+
+      res.status(HttpStatus.CREATED).json(responseObj);
     } catch (error) {
       next(error);
     }
