# src/modules/auth/dto/pharmacy-signup.dto.ts
@@ -1,0 +1,57 @@
+import { Type } from "class-transformer";
+import {
+  IsEmail,
+  IsNotEmpty,
+  IsNumber,
+  IsOptional,
+  IsString,
+  ValidateNested,
+} from "class-validator";
+
+export class ContactInfoDto {
+  @IsString()
+  @IsNotEmpty()
+  address: string;
+
+  @IsString()
+  @IsNotEmpty()
+  phone: string;
+
+  @IsString()
+  @IsNotEmpty()
+  state: string;
+
+  @IsString()
+  @IsNotEmpty()
+  country: string;
+
+  @IsNumber()
+  @IsNotEmpty()
+  longitude: number;
+
+  @IsNumber()
+  @IsNotEmpty()
+  latitude: number;
+}
+
+export class PharmacySignupDto {
+  @IsString()
+  @IsNotEmpty()
+  name: string;
+
+  @IsEmail()
+  @IsNotEmpty()
+  email: string;
+
+  @IsString()
+  @IsNotEmpty()
+  password: string;
+
+  @IsString()
+  @IsOptional()
+  description?: string;
+
+  @ValidateNested()
+  @Type(() => ContactInfoDto)
+  contactInfo: ContactInfoDto;
+}
